--- a/config.yaml
+++ b/config.yaml
@@ -56,12 +56,14 @@ params:
             color_fg: "#444"
             color_bg: "#eee"
             features:
-                - Up to 50 vault items
-                - Up to 3 connected devices
-                - Totally free!
+                - Store up to 50 passwords, credit cards and other items
+                - Up to 2 connected devices
+                - Free Apps for Mac, iOS, Windows, Android, Linux, and Chrome OS
+                - Fast and easy access to your passwords through your browser
+                - Free forever.
         premium:
             name: Premium
-            description: This is a very very cool plan! Check it out!
+            description: Everything you need to secure your data online.
             price:
                 dollars: 2
                 cents: 99
@@ -69,14 +71,15 @@ params:
             color_fg: "#fff"
             color_bg: "#23b4ff"
             features:
-                - Unlimited vault items
-                - Unlimited devices
+                - Store unlimited passwords, credit cards and other data
+                - Unlimited connected devices
                 - 1GB of encrypted file storage
-                - Advanced features like two-factor authentication,
-                  something else and more!
+                - Free Apps for Mac, iOS, Windows, Android, Linux, and Chrome OS
+                - Fast and easy access to your passwords through your browser
+                - Advanced features like two-factor authentication and more!
         family:
             name: Family
-            description: This is a very very cool plan! Check it out!
+            description: Simple and secure data storage for the entire family.
             price:
                 dollars: 0
                 cents: 99
@@ -84,46 +87,56 @@ params:
             color_fg: "#fff"
             color_bg: "#ff6666"
             features:
-                - Share data between your entire family
-                - Unlimited items
-                - Unlimited devices
+                - Securely share passwords, credit cards and other data
+                - Easily manage what family members can see and do
                 - 1GB of encrypted file storage
+                - Free Apps for Mac, iOS, Windows, Android, Linux, and Chrome OS
+                - Fast and easy access to your passwords through your browser
         team:
             name: Teams
-            description: This is a very very cool plan! Check it out!
+            description: Simple and secure data storage for your team.
             price:
-                dollars: 0
+                dollars: 2
                 cents: 99
             link: /beta?plan=teams
             color_fg: "#fff"
             color_bg: "#23b4ff"
             features:
-                - Share data between your entire family
-                - Unlimited items
-                - Unlimited devices
-                - 1GB of encrypted file storage
+                - Securely share passwords, documents, access keys and more
+                - Up to 20 shared vaults with unlimited items
+                - Up to 5 user groups for finegrained access control
+                - 5GB of encrypted file storage
+                - Free Apps for Mac, iOS, Windows, Android, Linux, and Chrome OS
+                - Fast and easy data access through our web interface
         business:
             name: Business
-            description: This is a very very cool plan! Check it out!
+            description: Flexibility and control for your advanced business needs.
             price:
-                dollars: 3
+                dollars: 5
                 cents: 99
             link: /beta?plan=business
             color_fg: "#fff"
             color_bg: "#ff6666"
             features:
-                - Share data between your entire family
-                - Unlimited items
-                - Unlimited devices
-                - 1GB of encrypted file storage
+                - Securely share passwords, documents, access keys and more
+                - Unlimited shared vaults with unlimited items
+                - Unlimited user groups for finegrained access control
+                - 20GB of encrypted file storage
+                - Free Apps for Mac, iOS, Windows, Android, Linux, and Chrome OS
+                - Fast and easy data access through our web interface
+                - 24/7 VIP support
         enterprise:
             name: Enterprise
             description: >-
-                The perfect solution for your advanced business needs,
-                with optional on-premise hosting, advanced permission
-                management and more. Contact us for more information!
+                Industry-leading secure data management solution for
+                organizations of any size.
             button_label: Get Custom Quote
             link: mailto:sales@padloc.app?title=Padloc+Enterprise
             color_fg: "#fff"
             color_bg: "#444"
             features:
+                - Tailormade setup and training
+                - 24/7 VIP support and dedicated account manager
+                - Dedicated onboarding engineer for custom system integrations
+                - Advanced tools for administration an monitoring
+                - Hosted and on-premise options available
