--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
 	"recommendations": [
 		"rusnasonov.vscode-hugo",
-		"budparr.language-hugo-vscode"
+		"budparr.language-hugo-vscode",
+		"stkb.rewrap",
+		"davidanson.vscode-markdownlint"
 	]
 }
